--- a/Android-Contributions/Note-Keeping-App/app/src/main/res/values/strings.xml
+++ b/Android-Contributions/Note-Keeping-App/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Note Keeping App</string>
+    <string name="alert_dialog_title">ALERT</string>
+    <string name="alert_dialog_message">Are you sure you want to delete this note?</string>
 </resources>
